--- a/ArtStation_Dashboard/Views/Trader/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Trader/Index.cshtml
@@ -120,17 +120,13 @@
     </div>
 <nav aria-label="Page navigation">
     <ul class="pagination pagination-primary pagination-sm justify-content-center">
-
         @for (int i = 1; i <= ViewBag.TotalPages; i++)
         {
             var isActive = (i == ViewBag.CurrentPage) ? "active" : "";
-            var isDisabled = (i == ViewBag.CurrentPage) ? "disabled" : "";
-
-            <li class="page-item @isActive @isDisabled">
-                <a class="page-link page-item active" href="?page=@i" tabindex="-1">@i</a>
+            <li class="page-item @isActive">
+                <a class="page-link" href="?page=@i">@i</a>
             </li>
         }
-
     </ul>
 </nav>
 @section Scripts {
