--- a/ArtStation_Dashboard/Views/Order/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Order/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="card my-4">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                     <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-                        <h6 class="text-white text-capitalize ps-3">@(("الطلبات","Orders").Localize(lang))</h6>
+                        <h6 class="text-white text-capitalize ps-3 pe-3">@(("الطلبات","Orders").Localize(lang))</h6>
                     </div>
                 </div>
                 <div class="card-body px-0 pb-2">
@@ -21,8 +21,8 @@
                         <table class="table align-items-center mb-0">
                             <thead>
                                 <tr>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">@(("رقم الطلب", "Order Number").Localize(lang))</th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">@(("رقم العميل", "Customer Phone").Localize(lang))</th>
+                                    <th class="text-center  text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">@(("رقم الطلب", "Order Number").Localize(lang))</th>
+                                    <th class=" text-center  text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">@(("رقم العميل", "Customer Phone").Localize(lang))</th>
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">@(("تاريخ الطلب", "Order Date").Localize(lang))</th>
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">@(("حاله الطلب", "Order Status").Localize(lang))</th>
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">@(("حاله الدفع", "Payment Status").Localize(lang))</th>
@@ -38,14 +38,11 @@
                                     {
                                         <tr>
 
-                                            <td>
+                                            <td class="align-middle text-center text-sm">
                                                 <p class="text-xs font-weight-bold mb-0">@(@item.OrderNum + 1000)</p>
-
-
                                             </td>
-                                            <td>
+                                            <td class="align-middle text-center text-sm">
                                                 <p class="text-xs font-weight-bold mb-0">@item.CustomerPhone</p>
-
                                             </td>
                                             
                                             <td class="align-middle text-center">
@@ -90,3 +87,14 @@
         </div>
     </div>
     </div>
+<nav aria-label="Page navigation">
+    <ul class="pagination pagination-primary pagination-sm justify-content-center">
+        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+        {
+            var isActive = (i == ViewBag.CurrentPage) ? "active" : "";
+            <li class="page-item @isActive">
+                <a class="page-link" href="@Url.Action("Index", new { page = i, pageSize = ViewBag.PageSize })">@i</a>
+            </li>
+        }
+    </ul>
+</nav>
