--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using  ArtStation_Dashboard.Resource
+
 @inject SignInManager<AppUser> SignInManager
 @{
     var culture = System.Globalization.CultureInfo.CurrentUICulture;
@@ -18,6 +19,28 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
 
+
+    <style>
+        @@Media print {
+        .no-print {
+                display: none !important;  }
+
+            body {
+                -webkit-print-color-adjust: exact;
+            }
+
+            table {
+                page-break-inside: avoid;
+            }
+
+            #invoice {
+                box-shadow: none !important;
+                border: none !important;
+            }
+
+            }
+        </style>
+    <
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" sizes="76x76" href="~/assets/img/apple-icon.png">
