--- a/ArtStation_Dashboard/Views/Category/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Category/Index.cshtml
@@ -10,6 +10,12 @@
         @TempData["message"]
     </div>
 }
+<div class="container-fluid py-4">
+    <a asp-action="Create" asp-controller="Category" class="btn btn-icon btn-3 btn-primary">
+                <i class="fa-solid fa-plus"></i>
+                @(("أضف تصنيف", "Add Category").Localize(language))
+            </a>
+     
 <div class="row">
     <div class="col-12">
         <div class="card my-4">
@@ -87,4 +93,5 @@
             }
         </ul>
     </nav>
+</div>
 </div>
